@@ -11,4 +11,4 @@ release = 1
 group = Development/Languages/Python
 packager = Robin Dunn <robin@alldunn.com>
 vendor = wxPROs
-doc_files = README.txt BUILD.txt CHANGES.txt licence/
+doc_files = README.txt BUILD.win32.txt BUILD.unix.txt CHANGES.txt licence/
